--- a/js practice/index.html
+++ b/js practice/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Testing</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Testing</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Music PlayList</h1>
-    <div id="listDiv">
+  <h1>Music PlayList</h1>
+  <div id="listDiv"></div>
 
-    </div>
-
-    <script src="js/helper.js"></script>
-    <script src="js/main.js"></script>
+  <script src="js/helper.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
