--- a/JavaScript Quiz/index.html
+++ b/JavaScript Quiz/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>JavaScript Quiz</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>JavaScript Quiz</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>JavaScript Quiz</h1>
-
-
-
-
-<script src="main.js"></script>
+  <h1>JavaScript Quiz</h1>
+  <div class="output"></div>
+  <script src="script.js"></script>
 </body>
 
 </html>
