--- a/JavaScript Quiz/index.html
+++ b/JavaScript Quiz/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>JavaScript Quiz</h1>
-  <div class="output"></div>
+  <div id="output"></div>
   <script src="script.js"></script>
 </body>
 
