Populated the UI with added functionality

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-
   <div class="container">
-
+    <h1>Todo List</h1>
+    <button id="displayTasksButton">Display tasks</button>
+    <button id="toggleAllButton">Toggle all</button>
   </div>
 
   <script src="main.js"></script>
