Created a handler object for our events

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="container">
     <h1>Todo List</h1>
-    <button id="displayTasksButton">Display tasks</button>
-    <button id="toggleAllButton">Toggle all</button>
+    <button onclick="handler.displayTasks()">Display tasks</button>
+    <button onclick="handler.toggleAll()">Toggle all</button>
   </div>
 
   <script src="main.js"></script>
