Added button and input to add tasks

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -13,8 +13,16 @@
 <body>
   <div class="container">
     <h1>Todo List</h1>
-    <button onclick="handler.displayTasks()">Display tasks</button>
-    <button onclick="handler.toggleAll()">Toggle all</button>
+    <div>
+      <button onclick="handler.displayTasks()">Display tasks</button>
+      <button onclick="handler.toggleAll()">Toggle all</button>
+    </div>
+
+    <div>
+      <button onclick="">Add</button>
+      <input id="AddTaskInput" type="text" name="" value="">
+    </div>
+
   </div>
 
   <script src="main.js"></script>
