Added the change task layout with functionality

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -19,8 +19,14 @@
     </div>
 
     <div>
-      <button onclick="">Add</button>
+      <button onclick="handler.addTask()">Add</button>
       <input id="AddTaskInput" type="text" name="" value="">
+    </div>
+
+    <div>
+      <button onclick="handler.changeTask()">Change Task</button>
+      <input id="changeTaskIndexInput" type="number">
+      <input id="changeTaskInput" type="text">
     </div>
 
   </div>
