Added the delete task layout with functionality

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -29,6 +29,11 @@
       <input id="changeTaskInput" type="text">
     </div>
 
+    <div>
+      <button onclick="handler.deleteTask()">Delete task</button>
+      <input id="deleteTaskIndexInput" type="number">
+    </div>
+
   </div>
 
   <script src="main.js"></script>
