added a toggle Completed layout with functionality

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -34,6 +34,11 @@
       <input id="deleteTaskIndexInput" type="number">
     </div>
 
+    <div>
+      <button onclick="handler.toggleCompleted()">Toggle completed</button>
+      <input id="toggleCompletedIndexInput" type="number">
+    </div>
+
   </div>
 
   <script src="main.js"></script>
