Working towards displaying our tasks on the browser window

--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -39,6 +39,7 @@
       <input id="toggleCompletedIndexInput" type="number">
     </div>
 
+    <ul id='tasksUl'></ul>
   </div>
 
   <script src="main.js"></script>
