--- a/Todo app/index.html
+++ b/Todo app/index.html
@@ -6,13 +6,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Todo List</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js">
+  </script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="container">
-    <h1>Todo List</h1>
+    <h1 class="text-center mt-5">Todo List</h1>
+
+    <div class="card mx-auto" style="width: 20rem;">
+      <img class="card-img-top" src="https://images.pexels.com/photos/209663/pexels-photo-209663.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="Card image cap">
+      <div class="card-block">
+        <div class="date">
+          <span id="date"></span>
+          <p id="month"></p>
+          <p id="day"></p>
+          <i class="fas fa-plus-circle"></i>
+        </div>
+
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+
     <div>
       <button onclick="handler.toggleAll()">Toggle all</button>
     </div>
@@ -34,6 +60,8 @@
     </div>
 
     <ul id='tasksUl'></ul>
+
+
   </div>
 
   <script src="main.js"></script>
