Styled the task items and deleted button a bit

--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -22,11 +22,14 @@
   <div class="container">
 
     <h1 class="center">Todo List</h1>
+    <!-- Tasks Card -->
     <div class="card hoverable">
       <div class="card-content">
-        <a data-target="modal1" class="btn-floating waves-effect waves-light red right modal-trigger" href="#modal1">
+        <!-- Modal Trigger -->
+        <a class="btn-floating waves-effect waves-light red right modal-trigger" href="#modal1">
           <i class="material-icons">add</i>
         </a>
+        <!-- Date -->
         <div class="date-grid">
           <span id="date"></span>
           <div class="month-day">
@@ -37,6 +40,7 @@
         <div class="divider"></div>
       </div>
       <div class="card-content">
+        <!-- Task List -->
         <ul id='tasksUl'></ul>
       </div>
 
@@ -45,7 +49,7 @@
         <div class="modal-content">
           <h4>Enter a task</h4>
           <div class="divider"></div>
-          <input id="addTaskInput" type="text" name="" value="">
+          <input id="addTaskInput" type="text" name="" value="" autofocus="autofocus">
         </div>
         <div class="modal-footer">
           <button onclick="handler.addTask()" class="modal-action modal-close waves-effect waves-red btn-flat">Submit</button>
