Styled a card stacking effect

--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -25,7 +25,7 @@
     <!-- Tasks Card -->
     <div class="card hoverable card-background">
       <h6 class="center heading-title">Todo List</h6>
-      <div class="card hoverable card-stack">
+      <div class="card card-stack">
         <div class="card-content">
           <!-- Modal Trigger -->
           <a class="btn-floating waves-effect waves-light  right modal-trigger" href="#modal1">
