--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -14,7 +14,7 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
   <!-- Custom style sheet -->
-  <link rel="stylesheet" href="css/materializeS.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -39,11 +39,15 @@
               <p id="day"></p>
             </div>
           </div>
+
+
+
           <div class="divider"></div>
         </div>
         <div class="card-content">
           <!-- Task List -->
           <ul id='tasksUl'></ul>
+
         </div>
 
         <!-- Modal -->
