--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -98,6 +98,14 @@
     $(document).ready(function () {
       $('.modal').modal();
     });
+
+    $(document).ready(function () {
+      $('input[type=checkbox]').each(function () {
+        if (this.nextSibling.nodeName != 'label') {
+          $(this).after('<label for="' + this.id + '"></label>')
+        }
+      })
+    })
   </script>
 
   <script src="test.js"></script>
