Modified date section

--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -32,7 +32,7 @@
           </a>
           <!-- Date -->
           <div class="date-grid">
-            <span id="date"></span>
+            <p id="date"></p>
             <div class="month-day">
               <p id="month"></p>
               <p id="day"></p>
