Modified commets and fonts

--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -11,11 +11,15 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!-- FONT FAMILY -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
-  <!-- Custom style sheet -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  <!-- Custom style sheet -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
