--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -75,24 +75,6 @@
 
 
 
-  <!-- ROUGH LAYOUT -->
-  <!-- <div>
-    <button onclick="handler.toggleAll()">Toggle all</button>
-  </div>
-
-  <div>
-    <button onclick="handler.changeTask()">Change Task</button>
-    <input id="changeTaskIndexInput" type="number">
-    <input id="changeTaskInput" type="text">
-  </div>
-
-  <div>
-    <button onclick="handler.toggleCompleted()">Toggle completed</button>
-    <input id="toggleCompletedIndexInput" type="number">
-  </div>
-  </div>
-
-
   <!-- Compiled and minified JQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
@@ -106,7 +88,7 @@
     });
   </script>
 
-  <script src="test.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
