Added filter feature

--- a/Todo-app/index.html
+++ b/Todo-app/index.html
@@ -44,8 +44,14 @@
           </div>
           <div class="divider"></div>
         </div>
-        <!-- Task List -->
-        <div class="card-content">
+        <!-- Task Filter -->
+        <div class="card-content" style="margin-top: -40px">
+          <h5 id="task-title">Tasks</h5>
+          <div class="input-field col s12">
+            <input type="text" id="filter">
+            <label for="filter">Filter Tasks</label>
+          </div>
+          <!-- Task List -->
           <ul id='tasksUl'></ul>
         </div>
         <!-- Task Counter-->
