--- a/JavaScript-Quiz/index.html
+++ b/JavaScript-Quiz/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>JavaScript Quiz</h1>
   <div id="output"></div>
-  <script src="script.js"></script>
+  <script src="t.js"></script>
 </body>
 
 </html>
