--- a/D3 Sandbox/index.html
+++ b/D3 Sandbox/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>D3</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.2/d3.js"></script>
 </head>
@@ -13,32 +14,8 @@
     <div class="container text-center">
         <h1>D3 Trial Run</h1>
     </div>
-    <script>
-        var panel = d3.select('div').append('svg').attr('class', 'canvas');
 
-        function circleLoop() {
-            var circle = panel.append('circle')
-                .attr('cx', 50)
-                .attr('cy', 100)
-                .attr('r', 20);
-            loop();
-
-            function loop() {
-                circle
-                    .transition()
-                    .delay(000)
-                    .attr('cx', 350)
-                    .duration(2000)
-                    .transition()
-                    .duration(3000)
-                    .attr('cx', 50)
-                    .on('end'
-                        ,loop)
-            }
-        }
-
-        circleLoop();
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
