--- a/name-calculator/index.html
+++ b/name-calculator/index.html
@@ -23,6 +23,7 @@
 
         <div class="cost">
             <div class="displayCost">$5</div>
+            <button id="clear">Clear</button>
             <input type="submit" value="Show Cost" id="calculate">
         </div>
     </div>
